k8s/services/people-service-web-app.yaml
---
#People Service
apiVersion: v1
kind: Service
metadata:
  name: people-web-app
  labels:
    app: people-web-app
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: people-web-app
